<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/add_field"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/add_field" />

        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help" />
        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="@string/contact" />
        <item
            android:id="@+id/language"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/language" />


        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_log_out_black_24dp"
            android:title="@string/logout" />
    </group>

</menu>
