<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close_popup"
            android:layout_marginTop="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_cancel_black_24dp"
            android:layout_gravity="end|top"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:text="@string/field_details"
            android:textStyle="bold|italic"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_name"
                    android:textStyle="bold|italic"
                    android:layout_alignParentLeft="true"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crop"
                    android:textStyle="bold|italic"
                    android:layout_alignParentLeft="true"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:textStyle="bold|italic"
                    android:layout_alignParentLeft="true"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_id"
                    android:textStyle="bold|italic"
                    android:layout_alignParentLeft="true"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/field_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/green"/>

                <TextView
                    android:id="@+id/field_crop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/green"/>
                <TextView
                    android:id="@+id/field_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/green"/>

                <TextView
                    android:id="@+id/field_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/green"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>